erKURITA
	* Warps maintainment
Evera
	* Everything.
	* Dungeon Teleport System NPCs.
	* iRO information gathering.
	* Kafra maintainment.
	* Taking requests.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment

== Changelog ==

Date		Added
======
09/29
	* Added official Kiel Dungeon entrance [Playtester]
	- commented the custom warps
	- note: there's no Kiel quest requirement yet, so anybody can go there
09/27
	* Added Rachel Field and Ice Dungeon spawn files [Playtester]
	- commented for now
09/21
	* Merged from trunk optimized Quest Skills, fixed Cube Room, Pollution Quest. [Lupus]
		Also updated NPC with missing NEXT;, fixed typos
		Updated Global_Functions.txt to clear your chars from outdated / garbage vars
09/19
	* Fixed rpsroulette.txt, giving 10 blue potions as prize instead of the 20 it said. Noticed by
	  JTE and fixed by Warian [erKURITA]
09/18
	* Merged guild folder from trunk into stable. It seems someone forgot to do, on gldfunc_treasure.txt,
	  set getarg(2),$@n;, which is what indicates the number of treasures one castle can have
	  according ot its economy. Of course, all castles would get only 1 treasure and the treasure chest
	  variable, $boxNumxx, would get negative each day. This merging should fix it. Thanks to Trojal over IRC
	  for pointing out [erKURITA]
09/14
	* Fixed typos in Gunslinger & Thief Job Quest & various NPCs [Lupus]
		thanks to cbmaster & $ephiroth
	- Fixed Guild Defence / Economy underflow, thx2 kyoki
09/11
	* Added back Guild Storage. Confirmed kRO feature. [Lupus]
	* Merged divorce.txt [Lupus]
09/10
	* Updated to official new byalan spawns [Playtester]
	- also adjusted eamobs accordingly
09/08
	* Fixed Einbroch headgear shop [Playtester]
09/06
	* Added a missing feature to the donation NPC in Lighthalzen [MasterOfMuppets]
09/05
	* eAAC Update to the banker. [erKURITA]
09/04