@@ -3,22 +3,57 @@
 //===== By: ==================================================
 //= Muad-Dib (1.0)
 //===== Current Version: =====================================
-//= 1.2
+//= 1.3
 //===== Compatible With: =====================================
-//= Any Athena Version; RO Episode 8+
+//= eAthena with independant npctimer support; RO Episode 8+
 //===== Description: =========================================
 //= Warp Points for Juperos Dungeon
 //===== Additional Comments: =================================
 //= 1.0 Converted by Dr.Evil [Lupus]
 //= 1.1 More temp warps to Juperos by Justin84 [Lupus]
 //= 1.2 Justin84's fixed elevator scripts
+//= 1.3 Fixed getting stuck when player relogs in. [Lance]
+//= 1.4 Added attachnpctimer to the initnpctimer calls. [Skotlex]
+//= 1.5 Implemented a part of the Juperos quest [MasterOfMuppets]
 //============================================================
 	
 yuno_fild07.gat,207,175,0	warp	jupwrp01	1,1,jupe_cave.gat,143,52
 jupe_cave.gat,148,52,0	warp	jupwrp02	1,1,yuno_fild07.gat,212,175
 jupe_cave.gat,26,52,0	warp	jupwrp03	1,1,juperos_01.gat,53,247
 juperos_01.gat,50,250,0	warp	jupwrp04	1,1,jupe_cave.gat,29,52
-juperos_01.gat,99,92,0	warp	jupwrp05	1,1,juperos_02.gat,36,60
+
+juperos_01.gat,99,92,1	script	jupwrp05	-1,0,0,{
+OnTouch:
+
+	mes "^666666[" + strcharinfo(0) + "]";
+	mes "^000000This light...";
+	mes "It feels like...";
+	mes "Its warmth is...";
+	mes "Wrapping all over me...";
+	next;
+	menu "Ah, it's so nice...",s_Nice,"No! This is wrong!",-;
+
+	mes "^666666[" + strcharinfo(0) + "]";
+	mes "^000000N-No! This is";
+	mes "wrong! Something";
+	mes "weird's happening!";
+	mes "I gotta get away!";
+	close2;
+	warp "juperos_01.gat",96,91;
+	end;
+
+s_Nice:
+	specialeffect 309;
+	mes "^666666[" + strcharinfo(0) + "]";
+	mes "^000000Ahhhh...";
+	mes "It feels like";
+	mes "I'm floating...";
+	close2;
+	warp "juperos_02.gat",128,278;
+	end;
+
+}
+
 juperos_02.gat,33,60,0	warp	jupwrp06	1,1,juperos_01.gat,99,88
 jupe_ele_r.gat,49,27,0	warp	jupwrp07	1,1,jupe_gate.gat,49,52
 jupe_gate.gat,49,55,0	warp	jupwrp08	1,1,jupe_ele_r.gat,49,30
@@ -50,89 +85,45 @@ jupe_area2.gat,129,106,0	warp	jupwrp36	1,1,jupe_area2.gat,129,140
 jupe_area2.gat,105,54,0	warp	jupwrp37	1,1,jupe_area2.gat,77,158
 jupe_area2.gat,79,158,0	warp	jupwrp38	1,1,jupe_area2.gat,108,54
 
-juperos_02.gat,129,150,0	script	Juperos	111,{
-	mes "Are you sure to enter?";
-	next;
-	menu "Yes",-,"No",J_CLOSE;
-	if(getmapusers("jupe_ele.gat") > 0)goto J_WAIT;
-	initnpctimer;
-	warp "jupe_ele.gat",41,45;
+juperos_02.gat,129,150,0	script	JupeWarp2	-1,1,1{
+OnInit:
+	disablenpc "JupeWarp2";
 	end;
-
-J_CLOSE:
-	close;
-
-J_WAIT:
-	mes "Sorry, the elevator is in use,";
-	mes "please wait for a while.";
-	close;
-
-OnTimer1000:
-	mapannounce "jupe_ele.gat","Wait a moment.",16;
-	soundeffect "jupe_warp.wav",0;
-	end;
-
-OnTimer15000:
-	stopnpctimer;
-	setnpctimer 0;
-	warp "jupe_ele_r.gat",50,94;
+OnTouch:
+	warp "jupe_gate.gat",49,162;
 	end;
 }
 
-jupe_ele_r.gat,50,98,0	script	Juperos Elevator	111,{
-	mes "Are you sure want to go up?";
-	next;
-	menu "Yes",-,"No",J_CLOSE;
-	if(getmapusers("jupe_ele.gat") > 0)goto J_WAIT;
-	initnpctimer;
-	warp "jupe_ele.gat",41,45;
-	end;
-
-J_CLOSE:
-	close;
-
-J_WAIT:
-	mes "Sorry, the elevator is in use,";
-	mes "please wait for a while.";
-	close;
-
-OnTimer1000:
-	mapannounce "jupe_ele.gat","Wait a moment.",16;
-	soundeffect "jupe_warp.wav",0;
-	end;
-
-OnTimer15000:
-	stopnpctimer;
-	setnpctimer 0;
+jupe_gate.gat,49,168,0	script	JupeWarp3	-1,1,1,{
+OnTouch:
 	warp "juperos_02.gat",129,147;
 	end;
 }
 
-jupe_gate.gat,49,168,0	script	Juperos Guard	111,{
-	mes "Are you sure to enter Juperos Core?";
+jupe_ele_r.gat,50,98,0	script	Juperos Guard	111,{
+	mes "Are you sure you want to enter the Juperos Core?";
 	next;
-	menu "Yes",-,"No",J_CLOSE;
-	initnpctimer;
-	soundeffect "jupe_warning.wav",0;
-	end;
+	if(select("Yes","No") == 1){
+		attachnpctimer;
+		initnpctimer;
+		soundeffect "jupe_warning.wav",0;
+	}
+	close;
 
 OnTimer5000:
 	stopnpctimer;
 	setnpctimer 0;
 	warp "jupe_core.gat",150,20;
 	end;
-
-J_CLOSE:
-	close;
 }
 
 jupe_core.gat,150,17,0	script	Juperos Guard#2	111,{
 	mes "Leave Juperos Core?";
 	next;
-	menu "Yes",-,"No",J_CLOSE;
-	warp "jupe_gate.gat",49,165;
-	end;
-
-J_CLOSE:
+	if(select("Yes", "No") == 1){
+		close2;
+		warp "jupe_ele_r",50,94;
+		end;
+	}
 	close;
 }
